[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/UI/Elements/Settings/Scripts/Sound.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]

[sub_resource type="StyleBoxFlat" id=3]

[sub_resource type="StyleBoxFlat" id=2]

[node name="Sound" type="GridContainer"]
custom_constants/vseparation = 6
custom_constants/hseparation = 6
columns = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 316.0
margin_bottom = 318.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 316.0
margin_bottom = 318.0
custom_constants/separation = 6

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_right = 316.0
margin_bottom = 14.0
text = "Sound Settings"

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 316.0
margin_bottom = 24.0

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 316.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 10 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 316.0
margin_bottom = 230.0

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/VBoxContainer"]
margin_right = 316.0
margin_bottom = 14.0
text = "General"

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 316.0
margin_bottom = 22.0

[node name="Master" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 316.0
margin_bottom = 76.0
alignment = 2

[node name="MasterToggle" type="CheckButton" parent="HBoxContainer/VBoxContainer/VBoxContainer/Master"]
margin_right = 112.0
margin_bottom = 50.0
focus_mode = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/hover_pressed = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
pressed = true
enabled_focus_mode = 0
text = "Master"
flat = true

[node name="MasterVolume" type="HSlider" parent="HBoxContainer/VBoxContainer/VBoxContainer/Master"]
margin_left = 116.0
margin_right = 316.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
min_value = -50.0
max_value = 6.0
step = 0.2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 316.0
margin_bottom = 130.0
alignment = 2

[node name="MusicToggle" type="CheckButton" parent="HBoxContainer/VBoxContainer/VBoxContainer/Music"]
margin_left = 13.0
margin_right = 112.0
margin_bottom = 50.0
focus_mode = 0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 3 )
custom_styles/hover_pressed = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
pressed = true
enabled_focus_mode = 0
text = "BGM"
flat = true

[node name="MusicVolume" type="HSlider" parent="HBoxContainer/VBoxContainer/VBoxContainer/Music"]
margin_left = 116.0
margin_right = 316.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
min_value = -50.0
max_value = 6.0
step = 0.2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFX" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 134.0
margin_right = 316.0
margin_bottom = 184.0
alignment = 2

[node name="SFXToggle" type="CheckButton" parent="HBoxContainer/VBoxContainer/VBoxContainer/SFX"]
margin_left = 22.0
margin_right = 112.0
margin_bottom = 50.0
focus_mode = 0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/hover_pressed = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
pressed = true
enabled_focus_mode = 0
text = "SFX"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXVolume" type="HSlider" parent="HBoxContainer/VBoxContainer/VBoxContainer/SFX"]
margin_left = 116.0
margin_right = 316.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
min_value = -6.0
max_value = 6.0
step = 0.2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="HBoxContainer/VBoxContainer"]
margin_top = 236.0
margin_right = 316.0
margin_bottom = 246.0
rect_min_size = Vector2( 0, 10 )

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 252.0
margin_right = 316.0
margin_bottom = 318.0

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/VBoxContainer2"]
margin_right = 316.0
margin_bottom = 14.0
text = "Input "

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/VBoxContainer/VBoxContainer2"]
margin_top = 18.0
margin_right = 316.0
margin_bottom = 22.0

[node name="CheckButton3" type="CheckButton" parent="HBoxContainer/VBoxContainer/VBoxContainer2"]
margin_top = 26.0
margin_right = 316.0
margin_bottom = 66.0
focus_mode = 0
enabled_focus_mode = 0
text = "Use Mic"
flat = true

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
margin_left = 322.0
margin_right = 373.0
margin_bottom = 318.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer2"]
margin_right = 51.0
margin_bottom = 318.0
custom_constants/separation = 6

[node name="Label" type="Label" parent="HBoxContainer2/VBoxContainer"]
margin_right = 51.0
margin_bottom = 14.0
text = "Devices"

[node name="HSeparator" type="HSeparator" parent="HBoxContainer2/VBoxContainer"]
margin_top = 20.0
margin_right = 51.0
margin_bottom = 24.0

[node name="Control" type="Control" parent="HBoxContainer2/VBoxContainer"]
margin_top = 30.0
margin_right = 51.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 10 )

[connection signal="toggled" from="HBoxContainer/VBoxContainer/VBoxContainer/Master/MasterToggle" to="." method="_on_MasterToggle_toggled"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/VBoxContainer/Master/MasterVolume" to="." method="_on_MasterVolume_value_changed"]
[connection signal="toggled" from="HBoxContainer/VBoxContainer/VBoxContainer/Music/MusicToggle" to="." method="_on_MusicToggle_toggled"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/VBoxContainer/Music/MusicVolume" to="." method="_on_MusicVolume_value_changed"]
[connection signal="toggled" from="HBoxContainer/VBoxContainer/VBoxContainer/SFX/SFXToggle" to="." method="_on_SFXToggle_toggled"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/VBoxContainer/SFX/SFXVolume" to="." method="_on_SFXVolume_value_changed"]
